teleport/ingress.yaml
---
# HTTPS Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teleport-cluster
  namespace: teleport-cluster
  annotations:
    # HTTPS as entry point
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # Enable TLS
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: teleport-k3s-dev.al.mt.gov.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teleport-cluster
                port:
                  number: 443
